test/error/localparam_type_no_default.sv
// pattern: localparam type "X" has no default value
module top;
    localparam type X;
endmodule
